--- a/src/modules/Filters/Filters.module.css
+++ b/src/modules/Filters/Filters.module.css
@@ -10,3 +10,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.inputData {
+  padding-top: 32px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
