--- a/src/modules/Filters/components/InputForSalary/InputForSalary.module.css
+++ b/src/modules/Filters/components/InputForSalary/InputForSalary.module.css
@@ -1,16 +1,17 @@
-.select {
+.wrapper {
+  position: relative;
+  width: 100%;
+}
+.input {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
   width: 260px;
-  height: 42px;
+  height: 40px;
   background: #ffffff;
   border: 1px solid #d5d6dc;
   border-radius: 8px;
-  /* cursor: pointer; */
   outline: none;
-
-  /* padding: 10px 135px 11px 12px; */
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -18,12 +19,24 @@
   line-height: 20px;
   color: #acadb9;
 }
+.input::-webkit-outer-spin-button,
+.input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
-input[type="salary"] {
+.input[type="number"] {
+  -moz-appearance: textfield;
   padding-left: 12px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: black;
 }
 
-.select::placeholder {
+.input::placeholder {
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -31,6 +44,71 @@ input[type="salary"] {
   line-height: 20px;
   color: #acadb9;
 }
+/* .buttonIncrease {
+  position: absolute;
+  top: 30%;
+  right: 25px;
+  cursor: pointer;
+}
+
+.buttonIncrease::before {
+  content: "";
+  width: 7px;
+  height: 2px;
+  background-color: #acadb9;
+  position: absolute;
+  top: 0;
+  border-radius: 5px;
+  transition: all 0.2s ease;
+}
+
+.buttonIncrease::after {
+  content: "";
+  width: 7px;
+  height: 2px;
+  background-color: #acadb9;
+  position: absolute;
+  top: 0;
+  border-radius: 5px;
+  transition: all 0.2s ease;
+}
+
+.buttonIncrease::before {
+  transform: rotate(42deg);
+  left: 4px;
+}
+
+.buttonIncrease::after {
+  transform: rotate(-42deg);
+}
+
+.buttonDecrease {
+  position: absolute;
+  bottom: 30%;
+  right: 25px;
+  cursor: pointer;
+}
+
+.buttonDecrease::before,
+::after {
+  content: "";
+  width: 7px;
+  height: 2px;
+  background-color: #acadb9;
+  position: absolute;
+  top: 0;
+  border-radius: 5px;
+  transition: all 0.2s ease;
+}
+
+.buttonDecrease::before {
+  transform: rotate(-42deg);
+  left: 4px;
+}
+
+.buttonDecrease::after {
+  transform: rotate(42deg);
+} */
 
 /* .select::-ms-expand {
     display: none;
