--- a/src/pages/VacancyPage/components/ParagraphOfDescription/ParagraphOfDescription.module.css
+++ b/src/pages/VacancyPage/components/ParagraphOfDescription/ParagraphOfDescription.module.css
@@ -1,26 +1,51 @@
-.wrapper {
-  background-color: aquamarine;
-  margin: 24px;
-  width: 725px;
-  height: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
+
+.description {
+  padding: 24px;
+  border-radius: 12px;
+  border: 1px solid #EAEBED;
+  background-color: rgb(255, 255, 255);
 }
 
-.title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 20px;
-  color: #232134;
-}
-
-.text {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
+.description p {
   font-size: 16px;
-  line-height: 140%;
+  margin-bottom: 20px;
+  line-height: 20px;
 }
+
+.description b {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.description ul {
+  margin: 20px 0;
+  /* list-style-type: none; */
+}
+
+.description li {
+  font-size: 16px;
+  line-height: 22px;
+  position: relative;
+  padding-left: 15px;
+}
+
+/* li::before {
+  content: "";
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #000;
+  position: absolute;
+  top: 10px;
+  left: 0;
+} */
+/* 
+@media (max-width: 568px) {
+  b {
+    font-size: 18px;
+  }
+  p {
+    font-size: 14px;
+  }
+} */
