--- a/src/modules/Filters/components/SalaryForSearch/SalaryForSearch.module.css
+++ b/src/modules/Filters/components/SalaryForSearch/SalaryForSearch.module.css
@@ -1,8 +1,20 @@
 .salary {
   position: relative;
-  width: 275px;
+  width: 100%;
   height: 119px;
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+@media screen and (max-width: 1130px) {
+  .salary {
+    width: 450px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .salary {
+    width: 95%;
+  }
 }
