--- a/src/modules/VacancyList/VacancyList.module.css
+++ b/src/modules/VacancyList/VacancyList.module.css
@@ -1,5 +1,12 @@
 .wrapper {
+  width: 773px;
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+@media screen and (max-width: 1130px) {
+  .wrapper {
+    width: 100%;
+  }
 }
