--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,12 +1,27 @@
 .wrapper {
-    width: 100%;
-    min-height: 100vh; 
-    height: auto;
-    background-color: #F7F7F8;
+  width: 100%;
+  min-height: 100vh;
+  height: auto;
+  background-color: #f7f7f8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+@media screen and (max-width: 1130px) {
+  .content {
+    width: 800px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+    .content {
+      width: 95%;
+    }
+  }
