--- a/src/modules/Filters/components/MainTitleForSearch/MainTitleForSearch.module.css
+++ b/src/modules/Filters/components/MainTitleForSearch/MainTitleForSearch.module.css
@@ -26,3 +26,15 @@
   align-items: center;
   cursor: pointer;
 }
+
+@media screen and (max-width: 1130px) {
+  .title {
+    width: 450px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    width: 95%;
+  }
+}
