--- a/src/modules/Header/Header.module.css
+++ b/src/modules/Header/Header.module.css
@@ -3,6 +3,7 @@
   height: 84px;
   background-color: white;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -14,4 +15,26 @@
   height: 36px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   cursor: pointer;
+}
+
+@media screen and (max-width: 1130px) {
+  .logo {
+    position: static;
+    left: 0px;
+  }
+  .wrapper {
+    gap: 300px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .wrapper {
+    gap: 60px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .logo {
+    display: none;
+  }
 }
