--- a/src/pages/VacancyPage/VacancyPage.module.css
+++ b/src/pages/VacancyPage/VacancyPage.module.css
@@ -1,9 +1,21 @@
 .wrapper {
-    margin-top: 40px;
-    margin-bottom: 51px;
-    max-width: 773px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+  margin-top: 40px;
+  margin-bottom: 51px;
+  max-width: 773px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+@media screen and (max-width: 790px) {
+    .wrapper {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .wrapper {
+        margin-top: 15px;
+    }
 }
