--- a/src/components/ShortVacancyInformation/ShortVacancyInformation.module.css
+++ b/src/components/ShortVacancyInformation/ShortVacancyInformation.module.css
@@ -8,6 +8,7 @@
 }
 
 .title {
+  position: relative;
   width: auto;
   font-family: "Inter";
   font-style: normal;
@@ -16,6 +17,7 @@
   line-height: 24px;
   color: #5e96fc;
   cursor: pointer;
+  transition: ease 0.2s;
 }
 
 .information {
