--- a/src/modules/SearchVacancyWithName/SearchVacancyWithName.module.css
+++ b/src/modules/SearchVacancyWithName/SearchVacancyWithName.module.css
@@ -32,6 +32,7 @@ input[type="text"] {
 }
 
 .input, .inputMobile::placeholder {
+  width: 100%;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
