--- a/src/modules/Header/Header.module.css
+++ b/src/modules/Header/Header.module.css
@@ -9,12 +9,34 @@
 }
 
 .logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   position: absolute;
-  left: 162px;
-  width: 141px;
-  height: 36px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  left: 152px;
+  width: 151px;
+  height: 46px;
+  z-index: 1;
   cursor: pointer;
+}
+
+.imageLogo {
+  margin-left: 10px;
+  z-index: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: ease 0.4s;
+}
+
+.textLogo {
+  margin-left: 12px;
+  z-index: 0;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: ease 0.4s;
+}
+
+.logo:hover > .imageLogo {
+  filter: drop-shadow(0px -4px 4px rgba(0, 0, 0, 0.35));
+  transform: rotate(180deg);
 }
 
 @media screen and (max-width: 1130px) {
